# dielectric

./: .gitignore  CLAUDE.md  PLAN-REFINED.md  PLAN.md  README.md  STACK.md  WHAT-IT-DOES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  pytest.ini  run_server.py
backend/app/: main.py  schemas.py  services.py  store.py
backend/tests/: conftest.py  test_api.py
data/: h02s19m01.csv  h02s19m02.csv  h02s19m03.csv  h02s19m04.csv  h02s19m05.csv  h02s19m06.csv  h02s19m07.csv  h02s19m08.csv  h02s19m09.csv  h02s19m10.csv  h02s19m11.csv  h02s19m12.csv  h02s19m13.csv  h02s19m14.csv  h02s19m15.csv  h02v01.csv  h02v02.csv  h02v03.csv  h02v04.csv  h02v05.csv  h02v06.csv  h02v07.csv  h02v08.csv  h02v09.csv  h02v10.csv  h02v11.csv  h02v12.csv  h02v13.csv  h02v14.csv  h02v15.csv  h02v16.csv  h02v17.csv  h02v18.csv  h02v19.csv  h02v20.csv  h02v21.csv  h02v22.csv  h02v23.csv  h02v24.csv  h02v25.csv
desktop/: README.md  electron-builder.yml  package-lock.json  package.json
desktop/electron/: backend.ts  main.ts  preload.ts  tsconfig.json
desktop/scripts/: build-backend.mjs
dielectric/: __init__.py  cli.py  comparison.py  constants.py  convention.py  spectrum.py  units.py
dielectric/fitting/: __init__.py  catalog.py  engine.py  fitters.py  result.py  selection.py
dielectric/io/: __init__.py  campaign.py  csv_loader.py  dispatch.py  hdf5.py  touchstone.py
dielectric/models/: __init__.py  base.py  cole_cole.py  cole_davidson.py  conductivity.py  debye.py  havriliak_negami.py  mixing.py  (+3 more)
docs/: model-fitting.md
examples/: worked_example.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
matlab/: README.md  cole_cole.m  fit_cole_cole.m  run_tests.m
packaging/: dielectric-server.spec
tests/: test_cli.py  test_comparison.py  test_fitting.py  test_foundations.py  test_io.py  test_io_dispatch.py  test_models.py  test_reference.py  test_reporting.py  test_uncertainty.py  test_verification.py
(+52 files in other folders)
