[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dielectric"
version = "0.1.0"
description = "Publication-ready dielectric spectroscopy analysis toolkit (already-inverted ε*(f) → fit → verify → uncertainty → report)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Niko Istuk", email = "niko.istuk@gmail.com" }]
keywords = ["dielectric", "spectroscopy", "permittivity", "cole-cole", "kramers-kronig", "metrology"]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.8",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.0"]
report = ["python-docx>=0.8", "weasyprint>=57"]
dev = ["pytest>=7", "pytest-cov>=4", "mypy>=1.0", "ruff>=0.1"]

[project.scripts]
dielectric = "dielectric.cli:main"

[tool.setuptools.packages.find]
include = ["dielectric*"]

[tool.setuptools.package-data]
dielectric = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# Greek/symbolic names are deliberate to match physics notation (memory: data-and-sign-convention).
ignore = ["N802", "N803", "N806", "N815", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas.*", "matplotlib.*", "h5py.*", "docx.*", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dielectric --cov-report=term-missing"
# The toolkit deliberately raises UserWarning on suspect data (sign convention, band limits);
# tests assert on these explicitly with pytest.warns rather than promoting them to errors.
filterwarnings = ["default"]
